--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
 
   <link rel="stylesheet" href="/stylesheets/materialize.min.css">
   <link rel="stylesheet" href="/stylesheets/style.css">
+  <link rel="stylesheet" href="/stylesheets/owl.carousel.min.css">
+  <!-- <link rel="stylesheet" href="/stylesheets/owl.carousel.min.js"> -->
+  <link rel="stylesheet" href="/stylesheets/owl.theme.min.css">
+  <link rel="stylesheet" href="/stylesheets/owl.transitions.min.css">
   <link rel="icon" href="data:;base64,iVBORw0KGgo=">
 </head>
 <body>
@@ -24,8 +28,11 @@
     <script src="/javascripts/global/angular.min.js"></script>
     <script src="/javascripts/global/angular-route.min.js"></script>
     <script src="/javascripts/global/jquery.js"></script>
+    <script src="/javascripts/global/jquery-2.1.3.min.js"></script>
+    <script src="/javascripts/global/owl.carousel.min.js"></script>
     <script src="/javascripts/global/materialize.min.js"></script>
     <script src="/javascripts/MainController.js"></script>
+    <!-- <script src="/javascripts/MiddleController.js"></script> -->
     <script src="/javascripts/app.routes.js"></script>
   </div>
 </body>
