--- a/public/index.html
+++ b/public/index.html
@@ -27,12 +27,14 @@
     <!-- Angular Material Dependencies-->
     <script src="/javascripts/global/angular.min.js"></script>
     <script src="/javascripts/global/angular-route.min.js"></script>
-    <script src="/javascripts/global/jquery.js"></script>
+    <!-- <script src="/javascripts/global/jquery.js"></script> -->
     <script src="/javascripts/global/jquery-2.1.3.min.js"></script>
+    <script src="/javascripts/global/materialize.min.js"></script>
     <script src="/javascripts/global/owl.carousel.min.js"></script>
     <script src="/javascripts/global/ngprogress.js"></script>
-    <script src="/javascripts/global/materialize.min.js"></script>
     <script src="/javascripts/MainController.js"></script>
+    <script src="/javascripts/MediumController.js"></script>
+    <script src="/javascripts/videoController.js"></script>
     <script src="/javascripts/app.routes.js"></script>
   </div>
 </body>
